# mdeGranular

./: CMakeLists.txt
.github/workflows/: build-all.yml  pd-linux.yml  pd-windows.yml
cmake/modules/: FindPureData.cmake
